Fixed excessive input length on mobile

--- a/justofada/styles/app.scss
+++ b/justofada/styles/app.scss
@@ -188,6 +188,7 @@ img {
     color: #333;
 
     margin-bottom: 0.5rem;
+    max-width: 100%;
   }
 
 }
@@ -436,6 +437,7 @@ img {
     color: #333;
 
     margin-bottom: 0.5rem;
+    max-width: 100%;
   }
 
   @keyframes captionBefore {
